# quart_template

./: .gitignore  Dockerfile  alembic.ini  build.sh  build_improved.sh  docker-compose.yml  pyproject.toml  unit-config.json
images/nginx/: Dockerfile  default.conf.template  nginx.conf
yet_another_flask_template/: app.py  cli.py  config.py  context.py  database.py  debug.py  errors.py  logger.py  serialization.py  types.py
yet_another_flask_template/migrations/: env.py
yet_another_flask_template/migrations/versions/: 9314ff58e401_init_schema.py
yet_another_flask_template/modules/core/: auth.py  blueprint.py  mappers.py  metadata.py  queries.py  schemas.py
yet_another_flask_template/modules/core/handlers/: auth.py  categories.py  entries.py
